--- a/e2e/env/common.env
+++ b/e2e/env/common.env
@@ -3,3 +3,13 @@ SCREENSHOTS_PATH="./reports/screenshots/"
 VIDEO_PATH="./reports/videos/"
 JSON_REPORT_FILE="./reports/report.json"
 HTML_REPORT_FILE="./reports/cucumber-htm-report.html"
+HOSTS_URLS_PATH="/config/hosts.json"
+PAGE_URLS_PATH="/config/pages.json"
+HEADLESS=false
+PAGE_ELEMENTS_PATH="/config/mappings/"
+SCRIPT_TIMEOUT=40000
+# PWDEBUG=1
+DEVTOOLS=false
+CUCUMBER_PUBLISH_QUIET=true
+PARALLEL=3
+RETRY=1
