--- a/e2e/env/common.env
+++ b/e2e/env/common.env
@@ -1,4 +1,4 @@
-UI_AUTOMATION_BROWSER='chromium'
+UI_AUTOMATION_BROWSER='firefox'
 SCREENSHOTS_PATH="./reports/screenshots/"
 VIDEO_PATH="./reports/videos/"
 JSON_REPORT_FILE="./reports/report.json"
@@ -7,7 +7,8 @@ HOSTS_URLS_PATH="/config/hosts.json"
 PAGE_URLS_PATH="/config/pages.json"
 HEADLESS=false
 PAGE_ELEMENTS_PATH="/config/mappings/"
-SCRIPT_TIMEOUT=40000
+ENV_PATH="./env/"
+SCRIPT_TIMEOUT=60000
 # PWDEBUG=1
 DEVTOOLS=false
 CUCUMBER_PUBLISH_QUIET=true
