--- a/e2e/env/common.env
+++ b/e2e/env/common.env
@@ -1,12 +1,18 @@
-UI_AUTOMATION_BROWSER='firefox'
+UI_AUTOMATION_BROWSER='chromium'
 SCREENSHOTS_PATH="./reports/screenshots/"
 VIDEO_PATH="./reports/videos/"
 JSON_REPORT_FILE="./reports/report.json"
 HTML_REPORT_FILE="./reports/cucumber-htm-report.html"
 HOSTS_URLS_PATH="/config/hosts.json"
 PAGE_URLS_PATH="/config/pages.json"
+LOG_LEVEL='log'
 HEADLESS=false
+EMULATION=iPhone 12
+BROWSER_WIDTH=1280
+BROWSER_HEIGHT=720
 PAGE_ELEMENTS_PATH="/config/mappings/"
+VAR_LOOKUP_TRIGGER='$.'
+EMAILS_URLS_PATH="/config/emails.json"
 ENV_PATH="./env/"
 SCRIPT_TIMEOUT=60000
 # PWDEBUG=1
